--- a/index.html
+++ b/index.html
@@ -4287,21 +4287,21 @@ self.postMessage(data)}
 							class="twbb-nav-menu--main twbb-nav-menu__container twbb-nav-menu--layout-horizontal e--pointer-none">
 							<ul id="menu-1-i1bbamh8" class="twbb-nav-menu twbb-menu_term_id-4">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-55"><a
-										href="tglink" class="twbb-item">telegram</a></li>
+										href="tglink" class="twbb-item">Telegram</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-56"><a
-										href="chartlink" class="twbb-item">chart</a></li>
+										href="chartlink" class="twbb-item">Chart</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-57"><a
-										href="xlink" class="twbb-item">twitter</a></li>
+										href="xlink" class="twbb-item">Twitter</a></li>
 							</ul>
 						</nav>
 						<nav class="twbb-nav-menu--dropdown twbb-nav-menu__container">
 							<ul id="menu-2-i1bbamh8" class="twbb-nav-menu twbb-menu_term_id-4">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-55"><a
-										href="tglink" class="twbb-item">telegram</a></li>
+										href="tglink" class="twbb-item">Telegram</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-56"><a
-										href="chartlink" class="twbb-item">chart</a></li>
+										href="chartlink" class="twbb-item">Chart</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-57"><a
-										href="xlink" class="twbb-item">twitter</a></li>
+										href="xlink" class="twbb-item">Twitter</a></li>
 							</ul>
 						</nav>
 
@@ -4316,7 +4316,7 @@ self.postMessage(data)}
 				<div class="elementor-element elementor-element-T2PDnU47 elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-text-editor"
 					data-id="T2PDnU47" data-element_type="widget" data-widget_type="text-editor.default">
 					<div class="elementor-widget-container">
-						<p>CA: 0xxxx00000000000000</p>
+						<p>CA: xxxxxxxxxxxxxxxxx</p>
 					</div>
 				</div>
 			</div>
@@ -4345,17 +4345,17 @@ self.postMessage(data)}
 					<div class="elementor-element elementor-element-Fw8VCjQl elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-heading"
 						data-id="Fw8VCjQl" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
-							<div class="elementor-heading-title elementor-size-default">about</div>
+							<div class="elementor-heading-title elementor-size-default">About</div>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-oWp5fb4E elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-text-editor"
 						data-id="oWp5fb4E" data-element_type="widget" data-widget_type="text-editor.default">
 						<div class="elementor-widget-container">
-							<p>kaner mckreegar is da hartfelt leeder of Amuriku. His mishun is to bild bak betta, to
+							<p>Kaner McKreegar is da hartfelt leeder of Amuriku. His mishun is to bild bak betta, to
 								unify da
 								divided, n to counter da wild claims . We re here to bring togetha
 								all da Amuriku memes and support one anotha thru da highs and lows. Make sure to stand
-								by kaner mckreegar for real change!</p>
+								by Kaner McKreegar for real change!</p>
 						</div>
 					</div>
 				</div>
@@ -4446,7 +4446,7 @@ self.postMessage(data)}
 						<div class="elementor-element elementor-element-3BchD7MA elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-heading"
 							data-id="3BchD7MA" data-element_type="widget" data-widget_type="heading.default">
 							<div class="elementor-widget-container">
-								<div class="elementor-heading-title elementor-size-default">kaner mckreegar </div>
+								<div class="elementor-heading-title elementor-size-default">Kaner McKreegar </div>
 							</div>
 						</div>
 						<div class="elementor-element elementor-element-MXKd9Vp5 elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-text-editor"
@@ -4494,7 +4494,7 @@ self.postMessage(data)}
 											alt="" srcset="2.png 375w, 2.png 300w"
 											sizes="(max-width: 375px) 100vw, 375px" /></a></figure>
 								<div class="elementor-image-box-content">
-									<div class="elementor-image-box-title"><a href="#9K6pKLur">kaner mckreegar </a>
+									<div class="elementor-image-box-title"><a href="#!">Kaner McKreegar </a>
 									</div>
 								</div>
 							</div>
@@ -4555,7 +4555,7 @@ self.postMessage(data)}
 				<div class="elementor-element elementor-element-MtU2TJK9 elementor-widget__width-inherit elementor-widget-mobile__width-inherit   elementor-widget elementor-widget-text-editor"
 					data-id="MtU2TJK9" data-element_type="widget" data-widget_type="text-editor.default">
 					<div class="elementor-widget-container">
-						<p>© 2024 by kaner mckreegar $McKreegar . All rights reserved.</p>
+						<p>© 2024 by Kaner McKreegar $McKreegar . All rights reserved.</p>
 					</div>
 				</div>
 			</div>
